# vlfeat_py

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  TODO.md  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
cmake/: FindvlFeat.cmake  InstallvlFeat.cmake
source/: vlfeat_py.cpp  vlfeat_py.h
source/HoG/: hog.cpp
source/lbp/: lbp.cpp
source/mser/: mser.cpp
source/sift/: dsift.cpp  sift.cpp
